; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ti/wl1251/extr_sdio.c_wl1251_sdio_set_power.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ti/wl1251/extr_sdio.c_wl1251_sdio_set_power.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wl1251 = type { i32 (i32)* }
%struct.sdio_func = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.wl1251*, i32)* @wl1251_sdio_set_power to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wl1251_sdio_set_power(%struct.wl1251* %0, i32 %1) #0 {
  %3 = alloca %struct.wl1251*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.sdio_func*, align 8
  %6 = alloca i32, align 4
  store %struct.wl1251* %0, %struct.wl1251** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.wl1251*, %struct.wl1251** %3, align 8
  %8 = call %struct.sdio_func* @wl_to_func(%struct.wl1251* %7)
  store %struct.sdio_func* %8, %struct.sdio_func** %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %38

11:                                               ; preds = %2
  %12 = load %struct.wl1251*, %struct.wl1251** %3, align 8
  %13 = getelementptr inbounds %struct.wl1251, %struct.wl1251* %12, i32 0, i32 0
  %14 = load i32 (i32)*, i32 (i32)** %13, align 8
  %15 = icmp ne i32 (i32)* %14, null
  br i1 %15, label %16, label %21

16:                                               ; preds = %11
  %17 = load %struct.wl1251*, %struct.wl1251** %3, align 8
  %18 = getelementptr inbounds %struct.wl1251, %struct.wl1251* %17, i32 0, i32 0
  %19 = load i32 (i32)*, i32 (i32)** %18, align 8
  %20 = call i32 %19(i32 1)
  br label %21

21:                                               ; preds = %16, %11
  %22 = load %struct.sdio_func*, %struct.sdio_func** %5, align 8
  %23 = getelementptr inbounds %struct.sdio_func, %struct.sdio_func* %22, i32 0, i32 0
  %24 = call i32 @pm_runtime_get_sync(i32* %23)
  store i32 %24, i32* %6, align 4
  %25 = load i32, i32* %6, align 4
  %26 = icmp slt i32 %25, 0
  br i1 %26, label %27, label %31

27:                                               ; preds = %21
  %28 = load %struct.sdio_func*, %struct.sdio_func** %5, align 8
  %29 = getelementptr inbounds %struct.sdio_func, %struct.sdio_func* %28, i32 0, i32 0
  %30 = call i32 @pm_runtime_put_sync(i32* %29)
  br label %63

31:                                               ; preds = %21
  %32 = load %struct.sdio_func*, %struct.sdio_func** %5, align 8
  %33 = call i32 @sdio_claim_host(%struct.sdio_func* %32)
  %34 = load %struct.sdio_func*, %struct.sdio_func** %5, align 8
  %35 = call i32 @sdio_enable_func(%struct.sdio_func* %34)
  %36 = load %struct.sdio_func*, %struct.sdio_func** %5, align 8
  %37 = call i32 @sdio_release_host(%struct.sdio_func* %36)
  br label %62

38:                                               ; preds = %2
  %39 = load %struct.sdio_func*, %struct.sdio_func** %5, align 8
  %40 = call i32 @sdio_claim_host(%struct.sdio_func* %39)
  %41 = load %struct.sdio_func*, %struct.sdio_func** %5, align 8
  %42 = call i32 @sdio_disable_func(%struct.sdio_func* %41)
  %43 = load %struct.sdio_func*, %struct.sdio_func** %5, align 8
  %44 = call i32 @sdio_release_host(%struct.sdio_func* %43)
  %45 = load %struct.sdio_func*, %struct.sdio_func** %5, align 8
  %46 = getelementptr inbounds %struct.sdio_func, %struct.sdio_func* %45, i32 0, i32 0
  %47 = call i32 @pm_runtime_put_sync(i32* %46)
  store i32 %47, i32* %6, align 4
  %48 = load i32, i32* %6, align 4
  %49 = icmp slt i32 %48, 0
  br i1 %49, label %50, label %51

50:                                               ; preds = %38
  br label %63

51:                                               ; preds = %38
  %52 = load %struct.wl1251*, %struct.wl1251** %3, align 8
  %53 = getelementptr inbounds %struct.wl1251, %struct.wl1251* %52, i32 0, i32 0
  %54 = load i32 (i32)*, i32 (i32)** %53, align 8
  %55 = icmp ne i32 (i32)* %54, null
  br i1 %55, label %56, label %61

56:                                               ; preds = %51
  %57 = load %struct.wl1251*, %struct.wl1251** %3, align 8
  %58 = getelementptr inbounds %struct.wl1251, %struct.wl1251* %57, i32 0, i32 0
  %59 = load i32 (i32)*, i32 (i32)** %58, align 8
  %60 = call i32 %59(i32 0)
  br label %61

61:                                               ; preds = %56, %51
  br label %62

62:                                               ; preds = %61, %31
  br label %63

63:                                               ; preds = %62, %50, %27
  %64 = load i32, i32* %6, align 4
  ret i32 %64
}

declare dso_local %struct.sdio_func* @wl_to_func(%struct.wl1251*) #1

declare dso_local i32 @pm_runtime_get_sync(i32*) #1

declare dso_local i32 @pm_runtime_put_sync(i32*) #1

declare dso_local i32 @sdio_claim_host(%struct.sdio_func*) #1

declare dso_local i32 @sdio_enable_func(%struct.sdio_func*) #1

declare dso_local i32 @sdio_release_host(%struct.sdio_func*) #1

declare dso_local i32 @sdio_disable_func(%struct.sdio_func*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
